feat: 온보딩 관리 4가지 화면 초안 구현 (핏체크/자기평가 리스트 및 상세)

--- a/offboarding.html
+++ b/offboarding.html
@@ -474,7 +474,7 @@
 
                 <div class="nav-section">
                     <span class="nav-section-label">직원</span>
-                    <a href="#" class="nav-item">
+                    <a href="employee-list.html" class="nav-item">
                         <img src="assets/에셋/Flat icons/team.svg" class="nav-icon" alt="">
                         직원 관리
                     </a>
