--- a/talent-detail-read.html
+++ b/talent-detail-read.html
@@ -1247,11 +1247,11 @@
 
                 <div class="nav-section">
                     <span class="nav-section-label">직원</span>
-                    <a href="#" class="nav-item">
+                    <a href="employee-list.html" class="nav-item">
                         <img src="assets/에셋/Flat icons/team.svg" class="nav-icon" alt="">
                         직원 관리
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="onboarding-fitcheck-list.html" class="nav-item">
                         <img src="assets/에셋/Flat icons/inport.svg" class="nav-icon" alt="">
                         온보딩 관리
                     </a>
