fix: 직원관리 페이지 UI 개선
- 필터 버튼과 직원 등록 버튼에서 아이콘 제거
- 오프보딩 모달의 오프보딩 처리 버튼 호버 색상 수정
- btn-ctoto--danger 클래스 추가 (danger 색상 적용)

--- a/employee-list.html
+++ b/employee-list.html
@@ -144,10 +144,8 @@
                     <div class="empl-toolbar-actions">
                         <button class="btn-pfto btn-pfto--lg" type="button">
                             <span class="btn-pfto__label">필터</span>
-                            <img src="assets/에셋/Icons/Options/Options 2.svg" alt="" class="btn-pfto__icon">
                         </button>
                         <button class="btn-pfti btn-pfti--lg" type="button">
-                            <img src="assets/에셋/Icons/Plus/Plus.svg" alt="" class="btn-pfti__icon">
                             <span class="btn-pfti__label">직원 등록</span>
                         </button>
                     </div>
@@ -899,7 +897,7 @@
             <!-- Footer -->
             <div class="modal__footer">
                 <button class="btn-soto btn-soto--xlg" type="button" onclick="closeModal('modal-offboarding')">취소</button>
-                <button class="btn-ctoto btn-ctoto--xlg btn-ctoti--danger" type="button" onclick="submitOffboarding()">오프보딩</button>
+                <button class="btn-ctoto btn-ctoto--xlg btn-ctoto--danger" type="button" onclick="submitOffboarding()">오프보딩</button>
             </div>
         </div>
     </div>
